--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  z-index: -1;
+  position: absolute;
+  top : 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#upar{
+  color: white;
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 20px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+button{
+  padding: 20px;
+  margin: 20px;
+  border-radius: 10px;
+  border: none;
+  background-color: #1E90FF;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  transition: 1s cubic-bezier(0.215, 0.610, 0.355, 1) ease-in-out ;
+}
+button:hover{
+  background-color: #1E90FF;
+  box-shadow: 0px 0px 20px 0px #1E90FF;
+
+}
+#fp-nav ul li a span, .fp-slidesNav ul li a span{
+  background: white!important;
+  box-shadow: 0px 0px 10px 0px #1E90FF;
+  
 }
