--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ button{
   color: white;
   font-size: 20px;
   font-weight: bold;
-  transition: 1s cubic-bezier(0.215, 0.610, 0.355, 1) ease-in-out ;
+  transition: 2s cubic-bezier(0.215, 0.610, 0.355, 1) ;
 }
 button:hover{
   background-color: #1E90FF;
